--- a/HTML/e-commerce.html
+++ b/HTML/e-commerce.html
@@ -6,7 +6,7 @@
     <title>Simple E-Commerce Product Page</title>
    
 </head>
-<body>
+<body bgcolor="pink">
 
     <div class="container">
         <marquee><h1 class="title">Eilik ENERGIZE LAB</h1></marquee>
